--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Ai lam xong thi up len github, xem o muc notification xem ai dang lam file nao, sau do chon file lien ke ma k ai lam de lam tiep nhe, roi cap nhat lai danh sach gium to. Vi du issue gan nhat la:
+Ai lam xong thi up len github, xem o issue job status xem ai dang lam file nao, sau do chon file lien ke ma k ai lam de lam tiep nhe, roi cap nhat lai danh sach gium to. Vi du issue gan nhat la:
 	Manh: Proposal
 	Thanh: Overview
 	Thien: Target & benefits
